Fix issue with events page width/flex on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2,22 +2,23 @@ html {
   background-color: white;
   font-size: 16px;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  width: 100%; }
 html * {
   box-sizing: border-box; }
 body {
   font-family: "prenton", "San Francisco Display", "Helvetica", "Lucida Grande", Arial, sans-serif;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  max-width: 100%; }
 main {
   width: 80%;
   max-width: 700px;
   margin: 2rem auto 0;
   padding-bottom: 4rem; }
 header {
-  width: 100%;
   background-color: #f7f5f6;
-  padding: 1rem; }
+  padding: 1rem 0; }
   header > div {
     width: 80%;
     max-width: 700px;
@@ -29,6 +30,14 @@ header {
     margin-bottom: 0.5rem;
     padding-bottom: 0.15em;
     border-bottom: 1px dotted #ecd7e5; }
+@media screen and (max-width: 850px) and (min-width: 641px) {
+  main {
+    width: 80%;
+    max-width: 850px; } }
+@media screen and (max-width: 640px) {
+  main {
+    width: 80%;
+    max-width: 640px; } }
 main.home-page {
   text-align: center; }
   main.home-page header {
@@ -125,13 +134,31 @@ table {
 .half {
   width: 50%; }
 .row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -1rem; }
   .row .column {
-    flex: 1;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -moz-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
     padding: 0 1rem 1rem 0;
-    min-width: 260px; }
+    min-width: 16rem; }
 .map {
   border: 2px solid #efeeee; }
   .map iframe {
@@ -145,15 +172,15 @@ table {
     opacity: 1;
     -webkit-transform: translateY(0);
     transform: translateY(0); } }
-.animated-view {
+.main-view {
   -webkit-transform-origin: top center;
   transform-origin: top center; }
-  .animated-view.ng-enter {
+  .main-view.ng-enter {
     animation: 0.35s pageIn ease-out;
     -webkit-animation: 0.35s pageIn ease-out; }
-.wf-loading .animated-view, .wf-loading body > header {
+.wf-loading .main-view, .wf-loading body > header {
   display: none; }
-.wf-active .animated-view .animated-view, .wf-active .animated-view body > header {
+.wf-active .main-view .main-view, .wf-active .main-view body > header {
   display: block; }
 .countdown {
   font-size: 1.4rem;
